# QSCOUT-gatemodels-ionsim

./: MANIFEST.in  README.md  setup.cfg
examples/H2 (Molecular Hydrogen)/: JaqalPaq_H2_Exemplar_IonSim.ipynb  Jaqal_H2_Stretched_IonSim.ipynb
examples/Tutorials/: Emulator_IonSim_Example.ipynb
src/qscout/v1/std/ionsim/: __init__.py  data.py  ionsim.py
src/qscout/v1/std/ionsim/data/: __init__.py
src/qscout/v1/std/ionsim/standard/: gate_models.py
