[metadata]
name = QSCOUT-gatemodels-ionsim
author = Brandon Ruzic, Benjamin C. A. Morrison, Jay Wesley Van Der Wall, Daniel Lobser, Antonio Russo, Kenneth Rudinger, Peter Maunz
author_email = qscout@sandia.gov
description = QSCOUT Gate Models
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
version = 0.1.0a0
home_page = https://qscout.sandia.gov
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix

[options]
packages = find_namespace:
package_dir =
    =src
install_requires = qscout-gatemodels>=1.1.0a0; jaqalpaq[pygsti-integration]>=1.1.0a0; dill; scipy; numpy; csaps
python_requires = >=3.6.5
platforms = any
inclde_package_data = True

[options.packages.find]
include =
    qscout.v1.std.ionsim
    qscout.v1.std.ionsim*
where = src

[options.extras_require]
tests = pytest

[options.package_data]
* = *.pyg

[options.data_files]
share/qscout-gatemodels-ionsim/tests =
    tests/__init__.py
share/jaqalpaq/examples/H2 (Molecular Hydrogen) =
    examples/H2 (Molecular Hydrogen)/JaqalPaq_H2_Exemplar_IonSim.ipynb
    examples/H2 (Molecular Hydrogen)/Jaqal_H2_Stretched_IonSim.ipynb
share/jaqalpaq/examples/Tutorials =
    examples/Tutorials/Emulator_IonSim_Example.ipynb

[bdist_wheel]
universal = 1
